Added to CSS and index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body class="body">
+
+    <div class="top-bar">
+        <h3> Home </h3>
+    </div>
+
         <h2 id="h2"><u><b> Dragon Ball Z </b></u></h2>
         <center><img class="image" src="./Images/DBZ.jpg" alt="Dragon Ball Z" ></center>
 
