Added to CSS and index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="body">
 
     <div class="top-bar">
-        <h3> Home </h3>
+            <h3> DragonBall Studios </h3>
     </div>
 
         <h2 id="h2"><u><b> Dragon Ball Z </b></u></h2>
